--- a/src/app/pages/tabs/home/home.page.html
+++ b/src/app/pages/tabs/home/home.page.html
@@ -84,11 +84,11 @@
   </ion-button> 
   </div>
 
-  <!-- complaint -->
-  <div class="complaint">
-    <ion-button [routerLink]="('/complaint')" class="complaintButton">
+  <!-- to pay -->
+  <div class="topay">
+    <ion-button [routerLink]="('/topay')" class="topayButton">
     <ion-icon slot="start" name="alert-circle"></ion-icon>
-    <div class="complaintTitle">Complaint</div>
+    <div class="topayTitle">ToPay</div>
   </ion-button> 
   </div>
 
