--- a/src/app/pages/tabs/home/home.page.scss
+++ b/src/app/pages/tabs/home/home.page.scss
@@ -45,7 +45,7 @@ ion-card {
     ion-button {
       font-size: 12px;
     }
-    .maintenanceReq, .complaint{
+    .maintenanceReq, .topay{
       width: 95%;
     }
   }
@@ -71,12 +71,12 @@ ion-card {
     ion-button {
       font-size: 10px;
     }
-    .maintenanceReq, .complaint{
+    .maintenanceReq, .topay{
       width: 100%;
     }
   }
   
-  .maintenanceReq, .complaint {
+  .maintenanceReq, .topay {
     width: 90%;
     max-width: 500px;
     margin: 30px auto;
@@ -90,7 +90,7 @@ ion-card {
     font-size: 14px;
   }
   
-  .complaintButton, .maintenanceButton {
+  .topayButton, .maintenanceButton {
     width: 100%;
     --background: #F0edFF;
     height: 150px;
@@ -101,11 +101,11 @@ ion-card {
     align-items: center;
     position: relative;
   }
-  .maintenanceTitle, .complaintTitle{
+  .maintenanceTitle, .topayTitle{
     margin-top: 70px;
   }
   
-  .complaintButton ion-icon,
+  .topayButton ion-icon,
   .maintenanceButton ion-icon {
     position: absolute;
     top: 60px;
