--- a/src/app/pages/tabs/home/maintenance/maintenance.page.html
+++ b/src/app/pages/tabs/home/maintenance/maintenance.page.html
@@ -1,13 +1,37 @@
+
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>maintenance</ion-title>
+  <ion-toolbar>    
+    <ion-buttons slot="start">
+      <ion-back-button default-href="#"></ion-back-button>
+    </ion-buttons>
+      <ion-title>Maintenance Request</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">maintenance</ion-title>
-    </ion-toolbar>
-  </ion-header>
+
+  <ion-list>
+    <ion-item lines="none">
+      <ion-select label="Maintenance Request" placeholder="Faucet">
+        <ion-select-option value="faucet">Leaky Faucet</ion-select-option>
+        <ion-select-option value="toilet">Clogged Toilet</ion-select-option>
+        <ion-select-option value="ceiling">Cracks in Ceilings</ion-select-option>
+        <ion-select-option value="outlet">Faulty Outlets</ion-select-option>
+        <ion-select-option value="Other">Other</ion-select-option>
+      </ion-select>
+    </ion-item>
+  </ion-list>
+
+  <ion-input
+    aria-label="Custom input"
+    placeholder="Type Something..."
+    class="custom">
+  </ion-input>
+
+  <div class="submit">
+    <ion-button>Submit</ion-button> 
+  </div>
+
+
+
 </ion-content>
