--- a/src/app/pages/tabs/account/account.page.html
+++ b/src/app/pages/tabs/account/account.page.html
@@ -1,13 +1,63 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>account</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content>
+	<ion-text class="header"></ion-text>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">account</ion-title>
-    </ion-toolbar>
-  </ion-header>
+	
+  <div class="ln">
+
+    <img alt="Silhouette of a person's head" src="https://ionicframework.com/docs/img/demos/avatar.svg">
+    <ion-text class="name">username</ion-text>
+   
+  </div>
+	
+
+
+	<div class="section">
+	<ion-card>
+  <ion-card-header>
+    <ion-card-title>Name</ion-card-title>
+    <ion-card-content class="ion-text-right">
+    </ion-card-content>
+  </ion-card-header>
+</ion-card>
+
+
+<ion-card>
+  <ion-card-header>
+    <ion-card-title>Email</ion-card-title>
+    <ion-card-content class="ion-text-right">
+    </ion-card-content>
+  </ion-card-header>
+</ion-card>
+
+
+<ion-card>
+  <ion-card-header>
+    <ion-card-title>Gender</ion-card-title>
+    <ion-card-content class="ion-text-right">
+    </ion-card-content>
+  </ion-card-header>
+</ion-card>
+
+
+
+<ion-card>
+  <ion-card-header>
+    <ion-card-title>Birthday</ion-card-title>
+    <ion-card-content class="ion-text-right">
+    </ion-card-content>
+  </ion-card-header>
+</ion-card>
+
+
+
+<ion-card>
+  <ion-card-header>
+    <ion-card-title>Phone number</ion-card-title>
+    <ion-card-content class="ion-text-right">
+    </ion-card-content>
+  </ion-card-header>
+</ion-card>
+
+
+</div>
 </ion-content>
