--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -6,7 +6,7 @@
       <ion-icon aria-hidden="true" name="home"></ion-icon>
     </ion-tab-button>
 
-    <ion-tab-button tab="payment" href="/payment">
+    <ion-tab-button tab="request" href="/request">
       <ion-icon aria-hidden="true" name="card"></ion-icon>
     </ion-tab-button>
 
@@ -15,6 +15,10 @@
     </ion-tab-button>
 
     <ion-tab-button tab="account" href="/account">
+      <ion-icon aria-hidden="true" name="person"></ion-icon>
+    </ion-tab-button>
+
+    <ion-tab-button tab="dashboard" href="/dashboard">
       <ion-icon aria-hidden="true" name="person"></ion-icon>
     </ion-tab-button>
 
