--- a/src/app/pages/tabs/account/account.page.scss
+++ b/src/app/pages/tabs/account/account.page.scss
@@ -1,3 +1,37 @@
+ion-content {
+    width: 100%;
+    background-color: #F9FAFB;
+    background-image: url(../../../../assets/img/bg/Vectoraccount.svg);
+    background-size: cover;
+}
+ion-card {
+    margin-left: 5%;
+    margin-right: 5%;
+    position: relative;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding: 0.5rem;
+    border-radius: 0;
+}
+ion-card-title {
+    font-size: 1rem;
+    width: 50%;
+    padding: 0.2rem;
+}
+ion-card-header {
+    padding-top: 0;
+    padding-bottom: 0;
+    display: flex;
+    flex-direction: row;
+}
+ion-card-content {
+    padding: 0.2rem;
+    width: 50%;
+    text-align: right;
+}
+
+
+
 .header {
     display: flex;
     justify-content: center;
@@ -21,6 +55,7 @@ img {
     text-align: center;
     width: 5rem;
     border-radius: 100%;
+    border: 0.2rem solid white;
     display: block;
 }
 .name {
@@ -39,17 +74,4 @@ img {
     background-color: #F9FAFB;
 }
 
-ion-content {
-    min-width: 100%;
-    min-height: auto;
-    max-height: max-content;
-    background-color: #F9FAFB;
-}
 
-ion-card {
-    background-color: #F9FAFB;
-    margin-left: 30px;
-    margin-right: 30px;
-    margin-bottom: 30px;
-    position: relative;
-  }
