-log out button

--- a/src/app/pages/tabs/account/account.page.html
+++ b/src/app/pages/tabs/account/account.page.html
@@ -1,56 +1,50 @@
 <ion-content>
 	<ion-text class="header"></ion-text>
   <div class="ln">
-
     <img alt="Silhouette of a person's head" src="https://ionicframework.com/docs/img/demos/avatar.svg">
     <ion-text class="name">username</ion-text>
-   
   </div>
-
 
 	<ion-card>
   <ion-card-header>
     <ion-card-title>Name</ion-card-title>
-    <ion-card-content class=" ">Larry Davis</ion-card-content>
+    <ion-card-content class="">Larry Davis</ion-card-content>
   </ion-card-header>
 </ion-card>
-
 
 <ion-card>
   <ion-card-header>
     <ion-card-title>Email</ion-card-title>
-    <ion-card-content class="ion-text-right">
+    <ion-card-content class="">
     </ion-card-content>
   </ion-card-header>
 </ion-card>
-
 
 <ion-card>
   <ion-card-header>
     <ion-card-title>Gender</ion-card-title>
-    <ion-card-content class="ion-text-right">
+    <ion-card-content class="">
     </ion-card-content>
   </ion-card-header>
 </ion-card>
-
-
 
 <ion-card>
   <ion-card-header>
     <ion-card-title>Birthday</ion-card-title>
-    <ion-card-content class="ion-text-right">
+    <ion-card-content class="">
     </ion-card-content>
   </ion-card-header>
 </ion-card>
-
-
 
 <ion-card>
   <ion-card-header>
     <ion-card-title>Phone number</ion-card-title>
-    <ion-card-content class="ion-text-right">
+    <ion-card-content class="">
     </ion-card-content>
   </ion-card-header>
 </ion-card>
+
+<ion-button fill="outline" expand="block" type="submit">
+  Log Out</ion-button>
 
 </ion-content>
