--- a/src/app/pages/tabs/account/account.page.scss
+++ b/src/app/pages/tabs/account/account.page.scss
@@ -74,4 +74,15 @@ img {
     background-color: #F9FAFB;
 }
 
+ion-button {
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+  
+    
+    width: 7.25rem;
+    height: 2.75rem;
+    border-radius: 3rem;
+}
 
