-setting up firebase

--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -1,4 +1,4 @@
-<ion-tabs>
+<ion-tabs mode="ios">
 
   <ion-tab-bar slot="bottom">
     
@@ -10,6 +10,10 @@
       <ion-icon aria-hidden="true" name="card"></ion-icon>
     </ion-tab-button>
 
+    <ion-tab-button tab="dashboard" href="/dashboard">
+      <ion-icon aria-hidden="true" name="apps"></ion-icon>
+    </ion-tab-button>
+
     <ion-tab-button tab="transactions" href="/transactions">
       <ion-icon aria-hidden="true" name="clipboard"></ion-icon>
     </ion-tab-button>
@@ -18,9 +22,6 @@
       <ion-icon aria-hidden="true" name="person"></ion-icon>
     </ion-tab-button>
 
-    <ion-tab-button tab="dashboard" href="/dashboard">
-      <ion-icon aria-hidden="true" name="person"></ion-icon>
-    </ion-tab-button>
 
   </ion-tab-bar>
 
