--- a/src/app/pages/tabs/transactions/transactions.page.html
+++ b/src/app/pages/tabs/transactions/transactions.page.html
@@ -1,68 +1,68 @@
-
+<script> src="main.js"</script>
 <ion-content>
   <ion-text class="header">TRANSACTIONS</ion-text>
- 
- 
+
+
   <div class="cards">
    <ion-card>
      <ion-card-header>
- 
+
      </ion-card-header>
    </ion-card>
- 
- 
+
+
    <ion-card>
      <ion-card-header>
- 
-     </ion-card-header>
-   </ion-card>
- 
-   <ion-card >
-     <ion-card-header>
- 
-     </ion-card-header>
-   </ion-card>
- 
-   <ion-card >
-     <ion-card-header>
- 
-     </ion-card-header>
-   </ion-card>
- 
- 
-   <ion-card >
-     <ion-card-header>
- 
-     </ion-card-header>
-   </ion-card>
- 
- 
-   <ion-card >
-     <ion-card-header>
- 
-     </ion-card-header>
-   </ion-card>
- 
- 
-   <ion-card >
-     <ion-card-header>
- 
-     </ion-card-header>
-   </ion-card>
- 
- 
- 
-   <ion-card >
-     <ion-card-header>
- 
-     </ion-card-header>
-   </ion-card>
- 
- 
 
- 
+     </ion-card-header>
+   </ion-card>
+
+   <ion-card >
+     <ion-card-header>
+
+     </ion-card-header>
+   </ion-card>
+
+   <ion-card >
+     <ion-card-header>
+
+     </ion-card-header>
+   </ion-card>
+
+
+   <ion-card >
+     <ion-card-header>
+
+     </ion-card-header>
+   </ion-card>
+
+
+   <ion-card >
+     <ion-card-header>
+
+     </ion-card-header>
+   </ion-card>
+
+
+   <ion-card >
+     <ion-card-header>
+
+     </ion-card-header>
+   </ion-card>
+
+
+
+   <ion-card >
+     <ion-card-header>
+
+     </ion-card-header>
+   </ion-card>
+
+
+
+
  </div>
  
+
  </ion-content>
- 
- 
+
