--- a/src/app/pages/tabs/account/account.page.html
+++ b/src/app/pages/tabs/account/account.page.html
@@ -8,15 +8,14 @@
 	<ion-card>
   <ion-card-header>
     <ion-card-title>Name</ion-card-title>
-    <ion-card-content class="">Larry Davis</ion-card-content>
+    <ion-card-content class="">Landlord</ion-card-content>
   </ion-card-header>
 </ion-card>
 
 <ion-card>
   <ion-card-header>
     <ion-card-title>Email</ion-card-title>
-    <ion-card-content class="">
-    </ion-card-content>
+    <ion-card-content class="">landlord$#64;mail.com</ion-card-content>
   </ion-card-header>
 </ion-card>
 
