--- a/src/app/pages/tabs/home/topay/topay.page.html
+++ b/src/app/pages/tabs/home/topay/topay.page.html
@@ -26,7 +26,7 @@
     <ion-select label="    " name="bill" id="bill" placeholder="Bill">
       <ion-select-option value="rent">Rent Bill</ion-select-option>
       <ion-select-option value="water">Water Bill</ion-select-option>
-      <ion-select-option value="electric">Electric Bill</ion-select-option>
+      <ion-select-option value="electric">Electricity Bill</ion-select-option>
     </ion-select>
 
   <h5>Payment Amount</h5>
