--- a/src/app/pages/tabs/request/request.page.html
+++ b/src/app/pages/tabs/request/request.page.html
@@ -1,12 +1,12 @@
 
 <ion-content>
   <ion-text class="header">REQUESTS</ion-text>
- 
- 
+
+  <ion-item></ion-item>
   <div class="cards">
    <ion-card>
      <ion-card-header>
- 
+     
      </ion-card-header>
    </ion-card>
  
