-logo and services

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -2,7 +2,7 @@
 
 	<ion-card class="card-center">
 		<ion-item lines="none" >
-			<img id="logo" src="../../../assets/placeholder-image.png" alt="SAP-logo.png">
+			<img id="logo" src="../../../assets/icon/SAP-logo.png" alt="SAP-logo.png">
 		</ion-item>
 
 		<ion-card-header>
@@ -42,12 +42,12 @@
 
 		</ion-card-content>
 	</ion-card>
-	<svg xmlns="http://www.w3.org/2000/svg" width="1440" height="1024" viewBox="0 0 1440 1024" fill="none">
+	<svg xmlns="http://www.w3.org/2000/svg" width="1920px" height="1080px" viewBox="0 0 1440 1024" fill="none">
 		<g filter="url(#filter0_f_348_23)">
 		<path fill-rule="evenodd" clip-rule="evenodd" d="M980.86 -171.074C1176.79 -123.201 1445.86 -147.637 1498.75 68.0285C1553.32 290.592 1412.21 610.056 1217.68 794.68C1044.66 958.897 843.412 805.905 642.58 880.62C445.001 954.125 253.357 1289.65 92.0463 1213.45C-66.1388 1138.73 3.26113 829.024 70.5182 610.389C117.608 457.313 294.979 398.24 385.259 260.295C473.083 126.104 450.142 -68.7593 573.443 -158.061C709.087 -256.302 850.86 -202.838 980.86 -171.074Z" fill="#BE87BE" fill-opacity="0.37"/>
 		</g>
 		<defs>
-		<filter id="filter0_f_348_23" x="-54.1797" y="-264.429" width="150%" height="150%" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+		<filter id="filter0_f_348_23" x="-54.1797" y="-264.429" width="100%" height="110%" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
 		<feFlood flood-opacity="0" result="BackgroundImageFix"/>
 		<feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape"/>
 		<feGaussianBlur stdDeviation="25" result="effect1_foregroundBlur_348_23"/>
