--- a/src/app/pages/signup/signup.page.html
+++ b/src/app/pages/signup/signup.page.html
@@ -2,7 +2,7 @@
   <div class="flex-center">
     <ion-card class="card">
       <ion-item lines="none">
-				<img id="logo" src="/assets/placeholder-image.png" alt="SAP logo">
+				<img id="logo" src="../../../assets/icon/SAP-logo.png" alt="SAP-logo.png">
 			</ion-item>
       <ion-card-header>
 				<ion-card-title color="primary" class="title">CREATE AN ACCOUNT</ion-card-title>
