--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -1,63 +1,77 @@
 // background image
 // ion-content {
-//   --background: url('../../../assets/img/bg/Designlogin.png') no-repeat 100% 100%;
+//   --background: url('../../../assets/img/bg/Vectorlogin.svg') no-repeat 100% 100%;
 // }
 
 ion-icon {
     position: relative;
   }
-  ion-input {
-    margin-left: 0.5rem;
-    width: 80%;
-  }
-  ion-card-title {
-    font-size: 1.4rem;
-  }
-  // ion-label {
-  //   font-family: 'Poppins';
-  // }
-  .card-center{
-    position: absolute;
-    top: 0; left: 0; bottom: 20%; right: 0;
-    margin: auto;
+ion-input {
+  margin-left: 0.5rem;
+  width: 80%;
+}
+ion-card-title {
+  font-size: 1.4rem;
+}
+// ion-label {
+//   font-family: 'Poppins';
+// }
+.card-center{
+  position: absolute;
+  top: 0; left: 0; bottom: 20%; right: 0;
+  margin: auto;
+
   
-    width: fit-content;
-    max-width: 90%;
-    height: fit-content;
-    border-radius: 1rem;
-  }
-  #button {
-    font-size: 1rem;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
+  max-width: 90%;
+  height: fit-content;
+  border-radius: 1rem;
+}
+#button {
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+
+  width: 7.25rem;
+  height: 2.75rem;
+  margin: auto;
+  border-radius: 3rem;
+
+
+  // the ff. does not work 
+  background: linear-gradient(100deg, #D2AAC2 -5.85%, #BE87BE 109.55%);
+  // box-shadow: 0px 8px 21px 0px rgba(0, 0, 0, 0.16);
+}
+
+#logo {
+  width: 55%;
+  margin: auto;
+  margin-bottom: -2rem;
+}
+
+.align-label {
+  text-align: center;
+  margin-top: 0.5rem;
+  color: gray;
+}
   
-    width: 7.25rem;
-    height: 2.75rem;
-    margin: auto;
-    border-radius: 3rem;
-  
-  
-    // the ff. does not work 
-    background: linear-gradient(100deg, #D2AAC2 -5.85%, #BE87BE 109.55%);
-    box-shadow: 0px 8px 21px 0px rgba(0, 0, 0, 0.16);
-  }
-  
-  #logo {
-    width: 55%;
-    margin: auto;
-  }
-  
-  .align-label {
-    text-align: center;
-    margin-top: 0.5rem;
-    color: gray;
-  }
-  
-  a {
+a {
     text-decoration: none;
     margin-left: 0.2rem;
+}
+
+@media (min-width: 768px) {
+ 
+
+  .card-center {
+    max-width: 40%;
+    position: absolute;
+    
+ 
+
   }
+}
+
   
     // containers
     #container {
@@ -87,3 +101,5 @@ ion-icon {
     #container a {
       text-decoration: none;
     }
+
+  
