--- a/src/app/pages/tabs/home/topay/topay.page.html
+++ b/src/app/pages/tabs/home/topay/topay.page.html
@@ -12,7 +12,7 @@
   <h5>Unit</h5>
   <form class="add" action="" id="payment">
 
-    <ion-select label="    "  name="unit" id="unit" placeholder="Unit">
+    <ion-select label="Select unit"  name="unit" id="unit" placeholder="Unit">
       <ion-select-option value="unit1">unit 1</ion-select-option>
       <ion-select-option value="unit2">unit 2</ion-select-option>
       <ion-select-option value="unit3">unit 3</ion-select-option>
@@ -23,7 +23,7 @@
 
   <h5>To pay</h5>
 
-    <ion-select label="    " name="bill" id="bill" placeholder="Bill">
+    <ion-select label="Select bill" name="bill" id="bill" placeholder="Bill">
       <ion-select-option value="rent">Rent Bill</ion-select-option>
       <ion-select-option value="water">Water Bill</ion-select-option>
       <ion-select-option value="electric">Electric Bill</ion-select-option>
