Update UI of Request Maintenance Page
Will add Create database functionalities later

--- a/src/app/pages/tabs/home/maintenance/maintenance.page.html
+++ b/src/app/pages/tabs/home/maintenance/maintenance.page.html
@@ -4,34 +4,29 @@
     <ion-buttons slot="start">
       <ion-back-button default-href="#"></ion-back-button>
     </ion-buttons>
-      <ion-title>Maintenance Request</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
+  <ion-label class="maintenanceRequest__title">Maintenance Request</ion-label>
 
-  <ion-list>
-    <ion-item lines="none">
-      <ion-select label="Maintenance Request" placeholder="Faucet">
-        <ion-select-option value="faucet">Leaky Faucet</ion-select-option>
-        <ion-select-option value="toilet">Clogged Toilet</ion-select-option>
-        <ion-select-option value="ceiling">Cracks in Ceilings</ion-select-option>
-        <ion-select-option value="outlet">Faulty Outlets</ion-select-option>
-        <ion-select-option value="Other">Other</ion-select-option>
-      </ion-select>
-    </ion-item>
-  </ion-list>
+  <section class="maintenanceRequest__selectSection">
+    <ion-select class="maintenanceRequest__selectfield" toggleIcon="chevron-down" label-placement="floating" label="Unit">
+      <ion-select-option value="1">1</ion-select-option>
+      <ion-select-option value="2">2</ion-select-option>
+      <ion-select-option value="3">3</ion-select-option>
+      <ion-select-option value="4">4</ion-select-option>
+      <ion-select-option value="5">5</ion-select-option>
+    </ion-select>
+  
+    <ion-select class="maintenanceRequest__selectfield" toggleIcon="chevron-down" label-placement="floating" label="Type">
+      <ion-select-option value="faucet">Leaky Faucet</ion-select-option>
+      <ion-select-option value="toilet">Clogged Toilet</ion-select-option>
+      <ion-select-option value="ceiling">Cracks in Ceilings</ion-select-option>
+      <ion-select-option value="outlet">Faulty Outlets</ion-select-option>
+      <ion-select-option value="Other">Other</ion-select-option>
+    </ion-select>
+  </section>
 
-  <ion-input
-    aria-label="Custom input"
-    placeholder="Type Something..."
-    class="custom">
-  </ion-input>
-
-  <div class="submit">
-    <ion-button>Submit</ion-button> 
-  </div>
-
-
-
+  <ion-button class="maintenanceRequest__submit-btn" expand="block">Submit</ion-button>
 </ion-content>
